--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo del post</h1>
-                <p>Y este es el parrafo donde vamos a explicar las cosas increibles que se pueden 
+                <p>Y este es el p&aacute;rrafo donde vamos a explicar las cosas incre&iacute;bles que se pueden 
                     hacer con ramas</p>
                     <p>Los blogs son la mejor forma de compartir información y tus ideas. 
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
